force-app/main/default/objects/Collateral__c/Collateral__c.object-meta.xml
<CustomObject>
    <label>Collateral</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>