force-app/main/default/objects/Collateral__c/fields/Adjustment_Description__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjustment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>