force-app/main/default/objects/Collateral__c/fields/Aircraft_Number__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Aircraft Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>