force-app/main/default/objects/Collateral__c/fields/Appraisal_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Request_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appraisal Request Date</label>
    <type>Date</type>
</CustomField>