force-app/main/default/objects/Collateral__c/fields/Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value__c</fullName>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>