force-app/main/default/objects/Collateral__c/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Body Style</label>
    <length>80</length>
    <type>Text</type>
</CustomField>