force-app/main/default/objects/Collateral__c/fields/Book_Number__c.field-meta.xml
<CustomField>
    <fullName>Book_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Book Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>