force-app/main/default/objects/Collateral__c/fields/Collateral_Owner__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collateral</relationshipLabel>
    <relationshipName>Collateral</relationshipName>
    <type>Lookup</type>
</CustomField>