force-app/main/default/objects/Collateral__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>Excellent</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>Good</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Fair</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Poor</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Property Inaccessible</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>