force-app/main/default/objects/Collateral__c/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <label>Discount Rate</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>