force-app/main/default/objects/Collateral__c/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Dwelling Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>