force-app/main/default/objects/Collateral__c/fields/Equipment_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Manufacturer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Manufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>