force-app/main/default/objects/Collateral__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inactive</label>
    <type>Date</type>
</CustomField>