force-app/main/default/objects/Collateral__c/fields/Number_of_Affordable_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Affordable_Units__c</fullName>
    <label>Number of Affordable Units</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>