force-app/main/default/objects/Collateral__c/fields/Ready_for_Appraisal__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Appraisal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready for Appraisal</label>
    <type>Checkbox</type>
</CustomField>