force-app/main/default/objects/Collateral__c/fields/Review_Period__c.field-meta.xml
<CustomField>
    <fullName>Review_Period__c</fullName>
    <label>Review Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10YR</fullName>
                <label>10 Years</label>
            </value>
            <value>
                <fullName>5YR</fullName>
                <label>5 Years</label>
            </value>
            <value>
                <fullName>ANNU</fullName>
                <label>Annually</label>
            </value>
            <value>
                <fullName>BWK4</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>BIWK</fullName>
                <label>Biweekly</label>
            </value>
            <value>
                <fullName>DAY</fullName>
                <label>Daily</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>