force-app/main/default/objects/Collateral__c/fields/Security_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Security_Instrument__c</fullName>
    <label>Security Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cd</fullName>
                <label>CD</label>
            </value>
            <value>
                <fullName>savings</fullName>
                <label>Savings</label>
            </value>
            <value>
                <fullName>checking</fullName>
                <label>Checking</label>
            </value>
            <value>
                <fullName>stock</fullName>
                <label>Stock</label>
            </value>
            <value>
                <fullName>bond</fullName>
                <label>Bond</label>
            </value>
            <value>
                <fullName>mutualFund</fullName>
                <label>Mutual Fund</label>
            </value>
            <value>
                <fullName>wholeLife</fullName>
                <label>Whole Life Policy</label>
            </value>
            <value>
                <fullName>termLife</fullName>
                <label>Term Life</label>
            </value>
            <value>
                <fullName>creditLife</fullName>
                <label>Credit Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>