force-app/main/default/objects/Collateral__c/fields/Source_System_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Source_System_Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>