force-app/main/default/objects/Collateral__c/fields/Street_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Street_Address_Line_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>