force-app/main/default/objects/Collateral__c/fields/SW_Collateral_Code__c.field-meta.xml
<CustomField>
    <fullName>SW_Collateral_Code__c</fullName>
    <label>Collateral Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>729452</fullName>
            </value>
            <value>
                <fullName>729459</fullName>
            </value>
            <value>
                <fullName>853692</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>