force-app/main/default/objects/Collateral__c/fields/SW_Collateral_ID__c.field-meta.xml
<CustomField>
    <fullName>SW_Collateral_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SW Collateral ID</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>