force-app/main/default/objects/Collateral__c/fields/SW_Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>SW_Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AllAssets</fullName>
                <label>All Business Assets</label>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>AccountsReceivable</fullName>
                <label>Accounts Receivable</label>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Fixtures</fullName>
            </value>
            <value>
                <fullName>GeneralIntangibles</fullName>
                <label>General Intangibles</label>
            </value>
            <value>
                <fullName>FarmEquipment</fullName>
                <label>Farm Equipment</label>
            </value>
            <value>
                <fullName>MotorVehicle</fullName>
                <label>Motor Vehicle</label>
            </value>
            <value>
                <fullName>TitledVehicles</fullName>
                <label>Other Titled Vehicle</label>
            </value>
            <value>
                <fullName>CommercialRealEstate</fullName>
                <label>Commercial Real Estate</label>
            </value>
            <value>
                <fullName>MultiFamily</fullName>
                <label>Multi-Family Real Estate</label>
            </value>
            <value>
                <fullName>ResidentialRealEstate</fullName>
                <label>Single-Family Real Estate</label>
            </value>
            <value>
                <fullName>RealEstateConstruction</fullName>
                <label>Construction Project</label>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>OtherRealEstate</fullName>
                <label>Other Real Estate</label>
            </value>
            <value>
                <fullName>ManufacturedHousing</fullName>
                <label>Manufactured Housing</label>
            </value>
            <value>
                <fullName>DepositAccounts</fullName>
                <label>Deposit Account</label>
            </value>
            <value>
                <fullName>Instruments</fullName>
                <label>Financial Instrument</label>
            </value>
            <value>
                <fullName>LifeInsurance</fullName>
                <label>Life Insurance</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>