force-app/main/default/objects/Collateral__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>2FAM</fullName>
                <label>2-4 Units Residential</label>
            </value>
            <value>
                <fullName>5FAM</fullName>
                <label>5+ Units Residential</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Accounts Receivable</label>
            </value>
            <value>
                <fullName>ABA</fullName>
                <label>All Business Assets</label>
            </value>
            <value>
                <fullName>APBT</fullName>
                <label>Apartment Buildings</label>
            </value>
            <value>
                <fullName>AUTN</fullName>
                <label>Automobile - New</label>
            </value>
            <value>
                <fullName>AUTU</fullName>
                <label>Automobile - Used</label>
            </value>
            <value>
                <fullName>DLRS</fullName>
                <label>Automotive Dealership</label>
            </value>
            <value>
                <fullName>BOAT</fullName>
                <label>Boat / Motor</label>
            </value>
            <value>
                <fullName>BOWL</fullName>
                <label>Bowling Alley</label>
            </value>
            <value>
                <fullName>CDSV</fullName>
                <label>CD/Savings Account</label>
            </value>
            <value>
                <fullName>CHUR</fullName>
                <label>Church</label>
            </value>
            <value>
                <fullName>CMEQ</fullName>
                <label>Commercial Equipment</label>
            </value>
            <value>
                <fullName>COMM</fullName>
                <label>Commercial Property (Nonresidential)</label>
            </value>
            <value>
                <fullName>CVEC</fullName>
                <label>Commercial Vehicle</label>
            </value>
            <value>
                <fullName>COND</fullName>
                <label>Condominium</label>
            </value>
            <value>
                <fullName>CND5</fullName>
                <label>Condos 5+ Units</label>
            </value>
            <value>
                <fullName>COOP</fullName>
                <label>Co-Ops</label>
            </value>
            <value>
                <fullName>HLTH</fullName>
                <label>Health Club</label>
            </value>
            <value>
                <fullName>1FBU</fullName>
                <label>Home and Business</label>
            </value>
            <value>
                <fullName>INDU</fullName>
                <label>Industrial</label>
            </value>
            <value>
                <fullName>LNDC</fullName>
                <label>Land - Commercial Development</label>
            </value>
            <value>
                <fullName>LNDR</fullName>
                <label>Land - Residential Development</label>
            </value>
            <value>
                <fullName>MOBN</fullName>
                <label>Mobile Home - New</label>
            </value>
            <value>
                <fullName>MOBU</fullName>
                <label>Mobile Home - Used</label>
            </value>
            <value>
                <fullName>MC14</fullName>
                <label>Multi-Unit Commercial 1-4</label>
            </value>
            <value>
                <fullName>MCO4</fullName>
                <label>Multi-Unit Commercial 5+</label>
            </value>
            <value>
                <fullName>OFFC</fullName>
                <label>Office Building</label>
            </value>
            <value>
                <fullName>OTHR</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>OTFA</fullName>
                <label>Other Fixed Assets</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>