force-app/main/default/objects/Collateral__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Estimated or appraised value of the collateral</description>
</CustomField>