force-app/main/default/objects/Collateral__c/fields/Value_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Value_Adjustment__c</fullName>
    <label>Value Adjustment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>