force-app/main/default/objects/Collateral__c/fields/Value_Source__c.field-meta.xml
<CustomField>
    <fullName>Value_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>