force-app/main/default/objects/Collateral__c/fields/Vessel_Length__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Length__c</fullName>
    <label>Vessel Length (feet)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>