force-app/main/default/objects/Collateral__c/fields/Vessel_Name__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vessel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>