force-app/main/default/objects/Collateral__c/fields/Vessel_Number__c.field-meta.xml
<CustomField>
    <fullName>Vessel_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vessel Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>