force-app/main/default/objects/Collateral__c/recordTypes/Business_Assets.recordType-meta.xml
<RecordType>
    <fullName>Business_Assets</fullName>
    <active>true</active>
    <label>Business Assets</label>
</RecordType>