force-app/main/default/objects/Collateral__c/recordTypes/Financial_Instrument.recordType-meta.xml
<RecordType>
    <fullName>Financial_Instrument</fullName>
    <active>true</active>
    <label>Financial Instrument</label>
</RecordType>