force-app/main/default/objects/Collateral__c/recordTypes/Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate</fullName>
    <active>true</active>
    <label>Real Estate</label>
</RecordType>